--- a/index.css
+++ b/index.css
@@ -63,7 +63,7 @@
   .Home .section-eigth{
     background-color: #1B1E24;
     text-align: center;
-    background-image: url('./images/bg_kickstarter.jpg');
+    background-image: url('./images/bg_kickstarter.png');
     min-height: 340px;
     padding-top: 30px;
     background-size: cover;
