--- a/index.css
+++ b/index.css
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: 'habeetat';
-  src: url("./fonts/habeetat.eot?jkb3do");
-  src: url("./fonts/habeetat.eot?jkb3do#iefix") format("embedded-opentype"), url("./fonts/habeetat.ttf?jkb3do") format("truetype"), url("./fonts/habeetat.woff?jkb3do") format("woff"), url("./fonts/habeetat.svg?jkb3do#habeetat") format("svg");
-  font-weight: normal;
-  font-style: normal; }
   .tac {
     text-align: center; }
   
@@ -12,8 +6,9 @@
     margin: 0 auto; }
 .Home {
     background-color: #fff;
-    font-size: 14px;
-    font-family: 'habeetat'; 
+    font-size: 16px;
+    font-family: Open Sans,sans-serif;
+    font-weight: 300;
   }
   .Home header {
     width: 100%;
@@ -73,7 +68,10 @@
     text-align: center;
     font-weight: 100;
   }
-
+  .device{
+    border: 5px solid lightgray;
+    border-radius: 5px;
+  }
   .Home .section-one {
     position: relative;
     background: url('./images/sec1.png') center center no-repeat;
@@ -97,6 +95,18 @@
   }
   .Home .section-two, .Home .section-six {
     padding-top: 40px;
+  }
+  .Home .section-seven h3{
+    color: #000;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 300;
+  }
+  .Home .section-seven h4{
+  color: #666;
+  text-align: center;
+  font-weight: 100;
+  font-size: 18px;
   }
   @media (min-width: 576px) {
     .Home .section-two .aboutus-img, .Home .section-six .aboutus-img {
