--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@
     background: url('./images/3dmodel.jpg') center center no-repeat;
     background-size: cover;
     padding-top: 80px;
-    height: 100%;
+    height: 50vh;
     padding-bottom: 50px;
   }
   .Home .section-one p {
@@ -108,6 +108,9 @@
   font-weight: 100;
   font-size: 18px;
   }
+  .header-text{
+    display: none;
+  }
   @media (min-width: 576px) {
     .Home .section-two .aboutus-img, .Home .section-six .aboutus-img {
       min-height: 100px;
@@ -135,6 +138,9 @@
     }
     .Home .home-container p {
       font-size: 1rem;
+    }
+    .header-text{
+      display: block;
     }
   }
   
