--- a/index.css
+++ b/index.css
@@ -1,9 +1,31 @@
-.tac {
+.scrolltop-wrap {
+    width: 46px;
+    height: 46px;
+    border-radius: 23px;
+    background-color: #ffc107;
     text-align: center;
+    padding: 7px;
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    z-index: 9999;
+    cursor: pointer;
+    opacity: 0.85;
+    overflow: hidden;
+    transform: scale(0);
+    transition: all 70ms ease-in-out;
 }
 
-.margin-top {
-    margin-top: 30px !important;
+.scrolltop-wrap:hover {
+    background-color: #e0a904;
+}
+
+.scrolltop {
+    width: 20px;
+}
+
+.tac {
+    text-align: center;
 }
 
 .spread {
@@ -140,10 +162,38 @@
     text-align: center;
 }
 
+.mission-wrap {
+    text-align: justify;
+    margin-top: 30px !important;
+}
+
+.center {
+    text-align: center;
+}
+
+.enlarge {
+    font-size: 60px;
+    color: #ffc107;
+    line-height: 0;
+}
+
+#bottom-part {
+    line-height: 50px;
+    text-align: end;
+}
+
+.margin-bottom {
+    margin-bottom: 50px;
+}
+
 .header-title-mobile {
     /* margin-top: -50px; */
     margin-top: 30px;
     font-weight: bold;
+}
+
+.list-container {
+    padding-left: 0;
 }
 
 .list-container,
@@ -181,6 +231,11 @@
 .subtitle-text {
     font-size: 28px;
     font-weight: bold;
+    padding: 0 10px;
+}
+
+.subtitle-text span {
+    color: #ffc107;
 }
 
 @media (max-width: 1200px) {
